<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.shixun.android.childtracking.FragmentRegister"
    android:weightSum="1">

    <EditText
        android:id="@+id/name"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/mypassword"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/repassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/repassword"
        android:inputType="textPassword"/>

    <Spinner
        android:id="@+id/member"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_weight="0.2"/>

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/btRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btRegister"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

</LinearLayout>
